--- a/package.json
+++ b/package.json
@@ -9,14 +9,19 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~49.0.15",
-    "expo-status-bar": "~1.6.0",
+    "expo": "~49.0.21",
+    "expo-location": "^16.3.0",
+    "expo-status-bar": "~1.7.1",
     "react": "18.2.0",
-    "react-native": "0.72.6",
-    "react-native-paper": "^5.11.3"
+    "react-native": "0.73.0",
+    "react-native-maps": "^1.8.3",
+    "react-native-modal-dropdown": "^1.0.2",
+    "react-native-paper": "^5.11.3",
+    "react-native-picker-select": "^9.0.0",
+    "react-native-safe-area-context": "^4.8.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.23.5"
   },
   "private": true
 }
